[package]
name = "gfa-injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pico-args = "0.5.0"
memchr = "2.5"
noodles = { version = "0.29", features = ["sam", "bam", "fasta"]}
flate2 = "1.0"
btoi = "0.4.2"
